# rust-collaborative-text-editor

./: README.md
rust-note/: Cargo.toml
rust-note/src/: client.rs  editor.rs  handler.rs  handlers.rs  main.rs  server.rs
rust-note/src/widgets/: format_bar.rs  menubar.rs  mod.rs
