[package]
name = "rust-note"
version = "0.1.0"
authors = ["Anubhav Sharma <anubhavsharma99@hotmail.com>"]
edition = "2021"
description = "A lightweight, terminal-based collaborative text editor built in Rust, supporting real-time collaboration."
license = "MIT"
repository = "https://github.com/anubhavsharma515/rust-collaborative-text-editor"
keywords = ["collaborative", "text editor", "rust", "real-time", "terminal"]
categories = ["text-editors", "collaboration", "network-programming"]
readme = "README.md"
homepage = "https://github.com/anubhavsharma515/rust-collaborative-text-editor"

[dependencies]
iced = { version = "0.13", features = [
    "canvas",
    "tokio",
    "highlighter",
    "markdown",
] }
iced_aw = { version = "0.11.0", default-features = false, features = [
    "menu",
    "tab_bar",
    "tabs",
] }
iced_futures = "0.13.2"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
headers = "0.4"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
async-tungstenite = { version = "0.25", features = [
    "tokio-rustls-webpki-roots",
] }
rfd = { version = "0.13" }
axum = { version = "0.7.9", features = ["macros", "ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
structopt = "0.3.26"
argon2 = { version = "0.5.3", features = ["password-hash"] }
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
cola-crdt = { version = "0.1.1", features = ["encode", "serde"] }
url = "2.5.2"
rand = "0.8.5"
